--- a/Styles/Site.css
+++ b/Styles/Site.css
@@ -54,10 +54,10 @@ nav {
     justify-content: center;
     align-items: center;
 }
-.center-form ::selection {
+input ::selection {
         /*make the selctor different in the input elements*/
-        background-color: var(--black);
-        color: var(--white);
+        background-color: var(--black) !important;
+        color: var(--white) im !important;
     }
 .inline-flex {
     /*for the button in the home page to alling*/
