--- a/Styles/Scrollbar.css
+++ b/Styles/Scrollbar.css
@@ -1,8 +1,11 @@
-﻿::-webkit-scrollbar {
+﻿:root {
+    --liquido: #23272b;
+  }
+::-webkit-scrollbar {
     width: 10px;
 }
 ::-webkit-scrollbar-track {
-    background-color: transparent;
+    background-color: var(--liquido);
 }
 ::-webkit-scrollbar-thumb {
     background: #888;
