--- a/Styles/Site.css
+++ b/Styles/Site.css
@@ -12,6 +12,7 @@ body {
   background-color: var(--liquido);
 }
 ::selection {
+  /*custom selection*/
   background-color: var(--white);
   color: var(--black);
 }
@@ -44,6 +45,7 @@ nav {
   width: 40%;
 }
 .message {
+  /*textarea for contact page*/
   width: 40%;
 }
 @media screen and (max-width: 1000px) {
@@ -71,6 +73,7 @@ nav {
   }
 }
 .center-form {
+  /*use this class to center inputs and buttons*/
   display: flex;
   justify-content: center;
   align-items: center;
@@ -108,6 +111,7 @@ nav {
   color: var(--black) !important;
 }
 hr {
+  /*style the line element*/
   border: 2px solid var(--danger);
   border-radius: 3px;
 }
@@ -139,7 +143,7 @@ hr {
   margin-bottom: 40px !important;
 }
 .formula {
-  /*leave a margin in the bottom of the "sho formula button"*/
+  /*leave a margin in the bottom of the "show formula button"*/
   margin-bottom: 20px;
 }
 .noscript {
@@ -151,4 +155,11 @@ hr {
   margin: 50px;
   padding: 5px;
   border-radius: 5px;
+}
+.profile-pic {
+  /*style the profile pic*/
+  border: 1px solid black;
+  border-radius: 50%; 
+  height: 1em; 
+  width: auto;
 }
