styling the textarea

--- a/Styles/Site.css
+++ b/Styles/Site.css
@@ -47,6 +47,7 @@ nav {
 .message {
   /*textarea for contact page*/
   width: 40%;
+  height: 100px;
 }
 @media screen and (max-width: 1000px) {
   /*make the inputs bigger for smaller screens*/
