--- a/Styles/Site.css
+++ b/Styles/Site.css
@@ -199,3 +199,23 @@ tr {
   font-weight: 300;
   vertical-align: middle;
 }
+.alert {
+  width: 60%;
+  margin-top: 20px !important;
+  margin-bottom: 20px !important;
+  transition: 0.2s;
+}
+@media screen and (max-width: 1000px) {
+  /*make the table 95% width for phones*/
+  .alert {
+    width: 80%;
+    transition: 0.2s;
+  }
+}
+@media screen and (max-width: 915px) {
+  /*make the table 95% width for phones*/
+  .alert {
+    width: 95%;
+    transition: 0.2s;
+  }
+}
