--- a/src/Styles/Site.css
+++ b/src/Styles/Site.css
@@ -256,6 +256,7 @@ tr {
 }
 .output-container {
     /*make the output div a stamdar height*/
+    line-height: 24px !important;
     height: 1em !important;
     max-height: 1em !important;
     min-height: 1em !important;
